Updated some issues with whitespace and fixed height issue on privacy page for EUID

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,7 +89,7 @@ button {
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  height: 100vh;
+  min-height: 100vh;
   padding: 5vh 24px;
 }
 
